--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,7 @@
+from tkinter.tix import INTEGER
 from telegram.ext import Updater, CommandHandler, MessageHandler, Filters
 from pprint import pprint
+
 
 TOKEN = '5253293576:AAEFvSgLY2JRX2yccFAjdsgGgCZputlORjM'
 updater = Updater(TOKEN, use_context=True)
@@ -9,9 +11,10 @@ print("bot's working")
 
 def start(update, context):
     chat = update.effective_chat
-    context.bot.send_message(chat_id=chat.id, text="Hello! \nWelcome to the BOT - CALCULATOR! \n So here i can calculate simple mathematical equations. \n But no more(i'm lazy).")
-    context.bot.send_message(chat_id=chat.id, text="Listen, here is one rule, you should follow: \n  - make space between the number and operation")
-    context.bot.send_message(chat_id=chat.id, text="here you got an example: 2 + 2")
+    context.bot.send_message(chat_id=chat.id, text="""Hello! \nWelcome to the BOT - CALCULATOR! \n So here i can calculate simple mathematical equations. \n But no more(i'm lazy). 
+    Listen, here is one rule, you should follow: \n  - make space between the number and operation 
+    here you got an example: 2 + 2""")
+
 def any_message(update, context):
     chat = update.effective_chat
     our_text = update.message.text
@@ -24,12 +27,12 @@ def any_message(update, context):
     else:
         try:
             for i in range(len(b)):
-                n1 = int(b[0])
+                n1 = float(b[0])
                 option = b[1]
-                n2 = int(b[2])
+                n2 = float(b[2])
         except:
-            context.bot.send_message(chat_id=chat.id, text="No no no no no no no. There is one rule. IS IT TOO HARD TO FOLLOW IT?!")
-            context.bot.send_message(chat_id=chat.id, text="here you got an example: 2 + 2")  
+            context.bot.send_message(chat_id=chat.id, text="""No no no no no no no. There is one rule. IS IT TOO HARD TO FOLLOW IT?! 
+            here you got an example: 2 + 2""")
         if option == "+":
                 result = n1 + n2
                 answer = f'answer: \n{result}'
@@ -43,10 +46,13 @@ def any_message(update, context):
                 answer = f'answer: \n{result}'
 
         elif option == "/" or ':':
-                result = n1 / n2
-                answer = f'answer: \n{result}'         
+                if n2 != 0:
+                    result = n1 / n2
+                    answer = f'answer: \n{result}'
+                else:
+                    context.bot.send_message(chat_id=chat.id, text="it is impossible to divide by 0!")     
         context.bot.send_message(chat_id=chat.id, text=answer)
-        context.bot.send_message(chat_id=chat.id, text="it was easy. What esle?")
+        context.bot.send_message(chat_id=chat.id, text="it was easy. What esle?")   
 dispatcher.add_handler(CommandHandler('start', start))
 dispatcher.add_handler(MessageHandler(Filters.all, any_message))
 
